--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,17 @@ main {
 .instructions {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    margin-top: 0;
+    margin: 0 20px;
     text-align: center;
+    font-size: 0.9rem;
 }
+
 
 .dice-container {
     display: grid;
     grid-template: auto auto / repeat(5, 1fr);
     gap: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 button {
@@ -88,4 +90,19 @@ button.roll-dice {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+
+.stats {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 300px;
+    font-family: 'Inter', sans-serif;
+    font-size: 0.9rem;
+    color: #4A4E74;
+    margin-bottom: 10px;
+}
+
+.stats p {
+    margin: 0;
 }
